boreal/tests/assets/invalid_files/compilation/invalid_identifier_type2.yar
// [error: invalid identifier type]
import "math"

rule c {
    condition:
        math.MEAN_BYTES[2] == /aab/
}
